Bug fix hover effect on IE

--- a/src/Styles/LikelyLoans/Summary-Circle.scss
+++ b/src/Styles/LikelyLoans/Summary-Circle.scss
@@ -37,13 +37,6 @@ $circle: 3vw;
     transition: width 0.25s ease, height 0.25s ease;
 }
 
-.circle-secondary:hover {
-    cursor: pointer;
-    width: 170px;
-    height: 170px;
-    margin-top: -80px;
-}
-
 .circle-inner  {
     text-align: center;
     display: inline-block;
@@ -91,14 +84,6 @@ $circle: 3vw;
         margin-right: 10%;
         margin-top: -20%;
         float:right;
-    }
-
-    .circle-secondary:hover {
-        height: 180px;
-        width: 180px;
-        margin-right: calc(10% - 5px);
-        margin-top: calc(-20% - 5px);
-        color: #fff !important;
     }
 
     .circle-inner {
